Add find by specific fields